fix order flow and customer session